--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_code C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(C_code main.c Matrix.h Activation_functions.h DNN.h)
+add_executable(C_code main.c Matrix.h Activation_functions.h DNN.h Loss_functions.h Optimizers.h)
